--- a/client/stylesheets/base/_extends.scss
+++ b/client/stylesheets/base/_extends.scss
@@ -18,7 +18,7 @@ h3.pinline {
   display: block;
   overflow: hidden;
   font-size: 1em;
-  font-weight: 100;
+  font-weight: 400;
   margin: 20px 0;
 
   span {
